--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800"
           rel="stylesheet" type="text/css"/>
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="../html/aboutme.html"/>
-    <link href="../html/styles/styles.css" rel="stylesheet"/>
-    <link href="../html/styles/overwrite.css" rel="stylesheet"/>
+    <link href="aboutme.html"/>
+    <link href="styles/styles.css" rel="stylesheet"/>
+    <link href="styles/overwrite.css" rel="stylesheet"/>
 
 
 </head>
@@ -36,9 +36,9 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ms-auto py-4 py-lg-0">
                 <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="../html/aboutme.html">About Me</a>
+                <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="aboutme.html">About Me</a>
                 </li>
-                <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="../html/tableau.html">Tableau</a>
+                <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="tableau.html">Tableau</a>
                 </li>
 
             </ul>
