--- a/aboutme.html
+++ b/aboutme.html
@@ -18,7 +18,7 @@
           rel="stylesheet" type="text/css"/>
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="styles/styles.css" rel="stylesheet"/>
-    <link href="../html/styles/overwrite.css" rel="stylesheet"/>
+    <link href="styles/overwrite.css" rel="stylesheet"/>
 </head>
 <body>
 <!-- Navigation-->
