--- a/tableau.html
+++ b/tableau.html
@@ -5,12 +5,12 @@
 <html>
 <head>
     <title>Jackson Tyrrell- Tableau Dashboard </title>
-    <link href="../html/styles/bootstyles.css" rel="stylesheet" type="text/css"/>
+    <link href="styles/bootstyles.css" rel="stylesheet" type="text/css"/>
 </head>
 <body class="homebg">
 <div class="collapse navbar-collapse" id="navbarResponsive">
     <ul class="navbar-nav ms-auto py-4 py-lg-0">
-        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="../index.html/index.html"><h2>Home</h2></a>
+        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="index.html"><h2>Home</h2></a>
         </li>
         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="aboutme.html"><h2>About Me</h2></a></li>
         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="tableau.html"><h2>Tableau</h2></a></li>
