--- a/tableau.html
+++ b/tableau.html
@@ -153,7 +153,7 @@
     <br>
     <p class="bold">If you would like to learn more about me, including what school was required to build this awesome
         website, visit my
-        <a href="../index.html/index.html">Home Page.</a>
+        <a href="index.html">Home Page.</a>
     </p>
     <br>
     <p class="bold">Or if you would prefer, <a href="https://www.tableau.com/">Click Here</a> to get more info about
