--- a/aboutme.html
+++ b/aboutme.html
@@ -94,7 +94,7 @@
                     where I hope to study Information Systems.
                     <br>
                     <br>
-                    To see a more detailed breakdown of my resume, please see my <a href="../index.html/index.html">home
+                    To see a more detailed breakdown of my resume, please see my <a href="index.html">home
                         page</a>
                     <br>
                     <br>
