--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </nav>
 <!-- Page Header-->
 <header class="masthead"
-        style="background-image: url('../html/images/Home\ Page\ Background.jpeg')"
+        style="background-image: url('images/Home\ Page\ Background.jpeg')"
         alt="A pathway in the fall">
     <div class="container position-relative px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
