--- a/aboutme.html
+++ b/aboutme.html
@@ -67,9 +67,9 @@
                 <p> I grew up in Omaha, NE for most of my life, but moved to Loveland, CO when I was a Junior in
                     High-School. After graduating High-School, I served a two year service mission for the Church of
                     Jesus Christ of Latter-Day Saints in Birmingham, AL. After returning home, I met and proposed to my
-                    wonderful Fiance, Qiang (shown above).
+                    fiance, Qiang (shown above). 
                     We plan to get married this upcoming August and we are both excited for this next chapter in our
-                    lives.
+                    lives!
                     <br>
                     <br>
                     Some of my favorite hobbies include spending time with my family,
